--- a/CshtmlClassLibraryExample.csproj
+++ b/CshtmlClassLibraryExample.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SharedServices\SharedServices.csproj" />
+  </ItemGroup>
+
 </Project>
