re-named, moved over a view to a razor class library

--- a/CshtmlClassLibraryExample.csproj
+++ b/CshtmlClassLibraryExample.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SharedServices\SharedServices.csproj" />
+    <ProjectReference Include="..\SharedViews\SharedViews.csproj" />
   </ItemGroup>
 
 </Project>
