--- a/SharedViews/SharedViews.csproj
+++ b/SharedViews/SharedViews.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SharedServices\SharedServices.csproj" />
   </ItemGroup>
 
